--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     a<sub>1</sub>
     10<sub>0</sub>
     <p>Сьогодні 1 c<sup>0</sup></p>
-    
+    <!-- Hello -->
+    <!-- new div -->
+    <div></div>
 </body>
 </html>
